--- a/public/static/app.css
+++ b/public/static/app.css
@@ -1,12 +1,34 @@
-.listado-productos {
-    background-color: #f3f3f3;
+.wrapper {
+  max-width: 1200px;
+  padding: 3rem 0;
+  margin: 0 auto;
 }
-.contenedor {
-    max-width: 1200px;
-    width: 95%;
-    padding: 3rem 0;
-    margin: 0 auto;
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
-.bg-white {
-    background-color: #FFF;
+
+.heading_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.heading_container select {
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.heading_container select option {
+  padding: 1rem;
+}
+
+
+.heading {
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
 }
