--- a/components/UI/HomeMessage/index.module.css
+++ b/components/UI/HomeMessage/index.module.css
@@ -5,15 +5,7 @@
   flex-direction: column;
   gap: 0.5rem;
   padding: 2rem;
-  margin: 1rem auto;
-  width: max-content;
-  box-sizing: border-box;
-}
-
-@media (max-width: 768px) {
-  .container {
-    width: 100%;
-  }
+  margin: 1rem 0;
 }
 
 .title {
@@ -27,14 +19,4 @@
   padding: 0;
   margin: 0;
   color: #4b587c;
-}
-
-.link {
-  background-color: var(--naranja);
-  color: white;
-  border-radius: 4px;
-  padding: 8px 16px;
-  width: max-content;
-  margin-top: 1.5rem;
-  margin-left: auto;
 }
