--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
+:root {
+  --dark-gray: #3d3d3d;
+  --medium-gray: #6f6f6f;
+  --light-gray: #e1e1e1;
+  --orange: #da552f;
+  --light-orange: rgba(232, 113, 80, .2);
+}
+
 * {
   box-sizing: border-box;
 }
@@ -8,6 +16,24 @@ body {
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+h1,
+h2 {
+  font-weight: 700;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0 0 2rem 0;
+  line-height: 1.5;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
