--- a/public/static/app.css
+++ b/public/static/app.css
@@ -1,25 +1,34 @@
 .wrapper {
   max-width: 1200px;
-  padding: 3rem 0;
   margin: 0 auto;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .heading_container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+@media (max-width: 480px) {
+  .heading_container {
+    display: grid;
+  }
 }
 
 .heading_container select {
   background-color: transparent;
   border: none;
   outline: none;
+  width: max-content;
+  color: #4b587c;
 }
 
 .heading_container select option {
@@ -30,6 +39,8 @@
   font-size: 24px;
   margin: 0;
   padding: 0;
+  font-weight: 600;
+  color: #21293c;
 }
 
 .product_list {
