--- a/public/static/app.css
+++ b/public/static/app.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  position: relative;
 }
 
 .heading_container {
@@ -15,6 +16,12 @@
   align-items: center;
   padding: 1rem;
   gap: 1rem;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+  background-color: white;
+  border-bottom: 1px solid #d8e1ec;
 }
 
 @media (max-width: 480px) {
@@ -45,5 +52,10 @@
 
 .product_list {
   margin: 0;
-  padding: 0;
+  padding: 2rem 0 0 0;
+}
+
+.exampleSearchLink {
+  color: var(--orange);
+  font-weight: 600;
 }
